Fix gap tex-claim of cover

--- a/css/global.css
+++ b/css/global.css
@@ -189,11 +189,17 @@ SECCIONES
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    gap: 48px;
+    gap: 32px;
     align-items: center;
     justify-content: center;
     text-align: center;
     padding-top: 62px;
+}
+
+@media (min-width: 768px) {
+    .container-cover {
+        gap: 48px;
+    }
 }
 
 @media (min-width: 1280px) {
@@ -217,7 +223,6 @@ SECCIONES
     align-items: center;
     font-family: "EB Garamond", serif;
     font-size: 16px;
-    padding: 12px;
     font-weight: 500;
 }
 
